--- a/src/DotNetGit/DotNetGit.props
+++ b/src/DotNetGit/DotNetGit.props
@@ -1,9 +1,9 @@
 <Project>
 
   <ItemGroup>
-    <PackageReference Include="GitInfo" Version="2.0.20" PrivateAssets="all" />
-    <PackageReference Include="Terminal.Gui" Version="0.24.0" PrivateAssets="all" />
-    <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" PrivateAssets="all" />
+    <PackageReference Include="GitInfo" Version="2.0.20" />
+    <PackageReference Include="Terminal.Gui" Version="0.24.0" />
+    <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" />
   </ItemGroup>
 
 </Project>
