--- a/src/DotNetGit/DotNetGit.csproj
+++ b/src/DotNetGit/DotNetGit.csproj
@@ -11,4 +11,8 @@
     <ToolCommandName>git</ToolCommandName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
+  </ItemGroup>
+
 </Project>
