--- a/src/DotNetGit/DotNetGit.props
+++ b/src/DotNetGit/DotNetGit.props
@@ -4,6 +4,7 @@
     <PackageReference Include="GitInfo" Version="2.0.20" />
     <PackageReference Include="Terminal.Gui" Version="0.24.0" />
     <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" />
+    <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
   </ItemGroup>
 
 </Project>
