Add MEF for easier composability
With this MEF addition we get:
1. Automatic discovery of main commands to be shown at the bottom of the top-level UI
2. Automatic importing of the current repository
3. Useful exports for running tasks asynchronous with good reentrancy support via JTC/JTF

We also add Merq as a core primitive since we'll use Commands and Events for the internals.

--- a/src/DotNetGit/DotNetGit.csproj
+++ b/src/DotNetGit/DotNetGit.csproj
@@ -11,4 +11,11 @@
     <ToolCommandName>git</ToolCommandName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Merq.Core" Version="1.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.3.13" />
+    <PackageReference Include="RxFree" Version="1.0.0-beta" />
+    <PackageReference Include="System.Composition" Version="1.2.0" />
+  </ItemGroup>
+
 </Project>
