--- a/src/DotNetGit/DotNetGit.csproj
+++ b/src/DotNetGit/DotNetGit.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.3.13" />
     <PackageReference Include="RxFree" Version="1.0.0-beta" />
     <PackageReference Include="System.Composition" Version="1.2.0" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
   </ItemGroup>
 
 </Project>
