Simplify menu command attribute, add ordering and display name
- Move all "Core" abstractions to `Core` folder.
- Leave Commands/Events as the actual instances used in the app.
- Add support for ordering and localizable display name for commands.
- Make the status bar update an actual event message instead of a simple string, but make it implicitly cast-able from string for easier triggering.
- Add launch settings for Guit alternative command line

--- a/src/DotNetGit/DotNetGit.props
+++ b/src/DotNetGit/DotNetGit.props
@@ -5,6 +5,11 @@
     <PackageReference Include="Terminal.Gui" Version="0.24.0" />
     <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
+    <PackageReference Include="Merq.Core" Version="1.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.3.13" />
+    <PackageReference Include="RxFree" Version="1.0.0-beta" />
+    <PackageReference Include="System.Composition" Version="1.2.0" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
   </ItemGroup>
 
 </Project>
