--- a/src/DotNetGit/DotNetGit.csproj
+++ b/src/DotNetGit/DotNetGit.csproj
@@ -12,11 +12,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Merq.Core" Version="1.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.3.13" />
-    <PackageReference Include="RxFree" Version="1.0.0-beta" />
-    <PackageReference Include="System.Composition" Version="1.2.0" />
-    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
