--- a/src/Guit/Guit.targets
+++ b/src/Guit/Guit.targets
@@ -18,6 +18,7 @@ AssemblyVersion=$(AssemblyVersion)" />
           Condition="'$(GitInfoImported)' == 'true' And '$(ExcludeRestorePackageImports)' != 'true'">
 
     <PropertyGroup>
+      <GitBranch>$(GitBranch.Replace('/', '-'))</GitBranch>
       <!-- We don't build stable versions from non-master branches. But when the version came from the branch, we leave it as-is. -->
       <GitSemVerDashLabel Condition="'$(GitBranch)' != 'master' and '$(GitSemVerDashLabel)' == '' and '$(GitSemVerSource)' != 'Branch'">-$(GitBranch)</GitSemVerDashLabel>
     </PropertyGroup>
