Add progress support, credentials via GCM

--- a/src/Guit/Properties/launchSettings.json
+++ b/src/Guit/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Guit": {
       "commandName": "Project",
-      "workingDirectory": "..\\.."
+      "workingDirectory": "C:\\Code\\Xamarin\\XamarinVS"
     }
   }
 }
