--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Terminal.Gui" Version="0.25.0" />
     <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
+    <PackageReference Include="Microsoft.Alm.Authentication" Version="4.3.0" />
     <PackageReference Include="Merq.Core" Version="1.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.3.13" />
     <PackageReference Include="RxFree" Version="1.0.0-beta" />
