Moved local/global commands to CommandService
Fixes https://github.com/kzu/guit/issues/9

--- a/src/Guit/Properties/launchSettings.json
+++ b/src/Guit/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Guit": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Code\\Xamarin\\XamarinVS"
+      "workingDirectory": "C:\\GitHub\\Guit"
     }
   }
 }
