--- a/src/Guit/Properties/launchSettings.json
+++ b/src/Guit/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Guit": {
       "commandName": "Project",
-      "workingDirectory": "C:\\GitHub\\Guit"
+      "workingDirectory": "..\\.."
     }
   }
 }
