--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -9,8 +9,10 @@
 
     <PackageId>dotnet-guit</PackageId>
     <ToolCommandName>guit</ToolCommandName>
+    <PackAsTool>true</PackAsTool>
 
-    <LangVersion>Latest</LangVersion>
+    <!-- See https://github.com/microsoft/Git-Credential-Manager-for-Windows/issues/864. Authentication won't work on MacOS until it's fixed :( -->
+    <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
