Add new Guit.Core project for "SDK" for Guit
First step towards having fully pluggable components for the
whole app.

Move all existing common reusable behavior to the new Core project.

--- a/src/Guit.Tests/Guit.Tests.csproj
+++ b/src/Guit.Tests/Guit.Tests.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Guit.Core\Guit.Core.csproj" />
     <ProjectReference Include="..\Guit\Guit.csproj" />
   </ItemGroup>
 
