Build packages by default from cmdline, use PackOnBuild
The super verbose `GeneratePackageOnBuild` is awful. Just use the much
shorter and intuitive (since the target is called `Pack`, `PackOnBuild`
makes way more sense as the property name).

Also, remove the unnecessary two steps to restore and set version, since
they can all be done in a single step.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,8 @@ variables:
 - group: Sleet
 - name: Configuration
   value: Release
+- name: PackageOutputPath
+  value: $(Build.ArtifactStagingDirectory)
 
 stages:
 
@@ -16,24 +18,11 @@ stages:
       clean: true
 
     - task: MSBuild@1
-      displayName: Restore
-      inputs:
-        solution: src/Guit.sln
-        configuration: $(Configuration)
-        msbuildArguments: -t:restore
-
-    - task: MSBuild@1
-      displayName: Set Version
-      inputs:
-        solution: src/Guit/Guit.csproj
-        msbuildArguments: -t:version
-
-    - task: MSBuild@1
       displayName: Build
       inputs:
         solution: src/Guit.sln
         configuration: $(Configuration)
-        msbuildArguments: -p:PackageOutputPath=$(Build.ArtifactStagingDirectory)
+        msbuildArguments: -r
 
     - task: VSTest@2
       displayName: Test
