Load Changes as a plugin
Added plugin discovery (for now only for built-in ones), automated
registration of built-in plugins into the main guit app by simply
adding a project reference to them (via `Directory.Build.*` on the
`Plugins` folder.

To test the selection mechanism, run the following on the git repo
root to test:

```
git config -e --local
```

In the editor that opens, add the following configuration section:

```
[guit]
	# Disable built-in plugins, so we can pick & choose
	coreplugins = false
	# Pick just the changes one
	plugin = Guit.Changes.dll
```

Run `guit` pointing to that directory and the changes view should be
the only one loaded. However, because the other two areas (Sync, Log)
have not been made into plugins yet, all of the commands will be
visible ¯\_(ツ)_/¯

--- a/src/Guit.Core/Guit.Core.csproj
+++ b/src/Guit.Core/Guit.Core.csproj
@@ -10,7 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="GitInfo" Version="2.0.20" />
-    <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" />
+    <PackageReference Include="Merq" Version="1.1.1" />
+    <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" PrivateAssets="all" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
     <PackageReference Include="RxFree" Version="1.0.0-beta" />
     <PackageReference Include="System.Composition" Version="1.2.0" />
