--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,4 +1,5 @@
 <Project>
+  <!-- Applies to the gui.cs submodule only, because src already has its Directory.Build.* -->
 
   <PropertyGroup>
     <NoWarn>CS1591;CS0162;CS0219;CS0649;CS0067;CS0169;CS0414;CS1573</NoWarn>
