--- a/src/Guit.Core/Guit.Core.csproj
+++ b/src/Guit.Core/Guit.Core.csproj
@@ -9,11 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitInfo" Version="2.0.20" />
+    <PackageReference Include="GitInfo" Version="2.0.20" PrivateAssets="all" />
     <PackageReference Include="Merq" Version="1.1.1" />
     <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" PrivateAssets="all" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
-    <PackageReference Include="RxFree" Version="1.0.0-beta" />
+    <PackageReference Include="RxFree" Version="1.0.0-beta" PrivateAssets="all" />
     <PackageReference Include="System.Composition" Version="1.2.0" />
   </ItemGroup>
 
