--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitInfo" Version="2.0.20" />
+    <PackageReference Include="GitInfo" Version="2.0.20" PrivateAssets="all" />
     <PackageReference Include="Microsoft.VisualStudio.Composition" Version="16.3.7" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
     <PackageReference Include="Microsoft.Alm.Authentication" Version="4.3.0" />
