--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -17,7 +17,7 @@
   <Target Name="Version" DependsOnTargets="SetVersions" AfterTargets="SetVersions">
     <Message Importance="high" Text="PackageVersion=$(PackageVersion)
 AssemblyVersion=$(AssemblyVersion)" />
-    <Message Condition="$(CI)" Importance="high" Text="##vso[build.updatebuildnumber]$(BuildVersion)"/>
+    <Message Condition="$(CI)" Importance="high" Text="##vso[build.updatebuildnumber]$(PackageVersion)"/>
   </Target>
 
   <Target Name="SetVersions"
@@ -41,7 +41,7 @@ AssemblyVersion=$(AssemblyVersion)" />
                        Include="pr.$(SYSTEM_PULLREQUEST_PULLREQUESTNUMBER)"/>
       <VersionMetadata Include="sha.$(GitCommit)" Condition="'$(GitCommit)' != ''"/>
       <VersionMetadata Condition="$(CI)"
-                       Include="build.$(BUILD_BUILDID)"/>
+                       Include="azdo.$(BUILD_BUILDID)"/>
     </ItemGroup>
 
     <PropertyGroup>
