Initial rework of plugins and composition for dynamic loading/unloading
The new infrastructure in .NET Core 3.0 allows us to load/unload plugins.
This also isolates plugins for better reliability.

The way this is implemented is as follows:

1. Plugins are read from git configuration.

2. There are two types of plugins:
   a. Built-in: these are simply built-in plugin assembly names, which are
      resolved from the default load context since they won't be dynamically
      loaded/unloaded since they would require an update to guit itself (they
      ship with the main `dotnet-guit` tool itself), and therefore, a full
      app restart). We just load these directly.
   b. NuGet-based: for these, we create a temporary folder under `.git\guit`
      (an already hidden folder typically, and not considered by git for
      commits). Each plugin gets its own temp dir within that, and a temp
      project with a single package reference pointing to the plugin package
      id and version. We restore and build the library, and persist the list
      of assemblies (typically just one in `lib` for the plugin) to be referenced.
      We leverage the fact that the ALC (assembly load context) can work together
      with an `AssemblyDependencyResolver` to automatically resolve the
      necessary dependencies from the restored nuget dependencies too, so the
      plugin temp project is just built in debug mode locally.

3. After restoring the plugins, each one gets its own `ALC` and we pass them
   all to the `CompositionManager` which gets all assemblies from all contexts
   and uses them to create a composition catalog. Assemblies already existing
   in the default load context (the main app's) will be returned from that ALC
   as-is, so that type sharing works (i.e. exporting/importing types from the
   core library).

4. The composition is used to retrieve the main app.

--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
 
     <AssemblyName>guit</AssemblyName>
     <RootNamespace>Guit</RootNamespace>
@@ -17,6 +17,19 @@
     <!-- We inherit this from Guit.Core -->
     <GitThisAssembly>false</GitThisAssembly>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Guit.Plugin.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Guit.Plugin.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Guit.Plugin.csproj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="GitInfo" Version="2.0.20" PrivateAssets="all" />
