--- a/src/Guit.Core/Guit.Core.csproj
+++ b/src/Guit.Core/Guit.Core.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
     <PackageReference Include="RxFree" Version="1.0.0-beta" PrivateAssets="all" />
     <PackageReference Include="System.Composition" Version="1.2.0" />
+    <PackageReference Include="NStack.Core" Version="0.11.0" />
   </ItemGroup>
 
   <ItemGroup>
