Enabled Nullable and fixed all related warnings

--- a/src/Guit.Core/Guit.Core.csproj
+++ b/src/Guit.Core/Guit.Core.csproj
@@ -6,6 +6,7 @@
 
     <Description>Library to build plugins for dotnet-guit.</Description>
     <PackageId>Guit.Core</PackageId>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
