--- a/src/Plugins/Guit.Sync/Guit.Sync.csproj
+++ b/src/Plugins/Guit.Sync/Guit.Sync.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <RootNamespace>Guit.Plugin.Sync</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
