Centralize Open behavior into a new plugin
Create a proper configuration reading extension that makes it
simpler to convert from config to a DTO.

Refactor ISingleton into a simple new attribute, SingletonAttribute,
since some singletons we were providing could never be casted to
ISingleton (i.e. Repository). Add capability of retrieving exports
by contract name only (typed object), so they can be instantiated.

Finally, centralize the view/diff/merge behavior into the Open
command, which detects what the current selection (or the received
argument) state is, and intelligently performs the relevant action:
for changed files, diff, for files in conflict, merge, and for
the rest, just view. We leverage git configuration to honor core.editor
as well as diff/merge tool config.

--- a/src/Plugins/Guit.Open/Guit.Open.csproj
+++ b/src/Plugins/Guit.Open/Guit.Open.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="vswhere" Version="2.7.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Guit.Core\Guit.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="$(VSWhereDir)vswhere.exe" CopyToOutputDirectory="PreserveNewest" Pack="true" />
   </ItemGroup>
 
   <ItemGroup>
