--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -53,6 +53,7 @@
     <ProjectReference Include="..\Plugins\Guit.Changes\Guit.Changes.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Log\Guit.Log.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Open\Guit.Open.csproj" />
+    <ProjectReference Include="..\Plugins\Guit.Releaseator\Guit.Releaseator.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Sync\Guit.Sync.csproj" />
   </ItemGroup>
 
