--- a/src/Plugins/Guit.Releaseator/Guit.Releaseator.csproj
+++ b/src/Plugins/Guit.Releaseator/Guit.Releaseator.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>Guit.Plugin.Releaseator</RootNamespace>
+    <IsCorePlugin>false</IsCorePlugin>
   </PropertyGroup>
 
   <ItemGroup>
