Renamed Guit.Releaseator -> CherryPicker

--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -51,9 +51,9 @@
     <ProjectReference Include="..\..\gui.cs\Terminal.Gui\Terminal.Gui.csproj" />
     <ProjectReference Include="..\Guit.Core\Guit.Core.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Changes\Guit.Changes.csproj" />
+    <ProjectReference Include="..\Plugins\Guit.CherryPicker\Guit.CherryPicker.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Log\Guit.Log.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Open\Guit.Open.csproj" />
-    <ProjectReference Include="..\Plugins\Guit.Releaseator\Guit.Releaseator.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Sync\Guit.Sync.csproj" />
   </ItemGroup>
 
