--- a/src/Plugins/Guit.CherryPicker/Guit.CherryPicker.csproj
+++ b/src/Plugins/Guit.CherryPicker/Guit.CherryPicker.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <RootNamespace>Guit.Plugin.Releaseator</RootNamespace>
+    <RootNamespace>Guit.Plugin.CherryPicker</RootNamespace>
     <IsCorePlugin>false</IsCorePlugin>
   </PropertyGroup>
 
