--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -52,6 +52,7 @@
     <ProjectReference Include="..\Guit.Core\Guit.Core.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Changes\Guit.Changes.csproj" />
     <ProjectReference Include="..\Plugins\Guit.CherryPicker\Guit.CherryPicker.csproj" />
+    <ProjectReference Include="..\Plugins\Guit.Help\Guit.Help.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Log\Guit.Log.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Open\Guit.Open.csproj" />
     <ProjectReference Include="..\Plugins\Guit.Sync\Guit.Sync.csproj" />
