Add plugin installation from nuget.org
Packages found by searching for `guit` and tagged with `guit`
will be listed for installation.

Improved uninstall support as well as auto-disabling of plugins
we fail to restore for whatever reason.

Improved plugin persistence by sorting by identify.

--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -45,6 +45,8 @@
     <PackageReference Include="Merq.Core" Version="1.2.0" />
     <PackageReference Include="System.Composition" Version="1.3.0" />
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.6.0" />
+    <PackageReference Include="NuGet.Client" Version="4.2.0" />
+    <PackageReference Include="NuGet.Protocol.Core.v3" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
