Allow hiding core plugins, optimize lookup
Core plugins can be read only once and kept static.
By allowing core plugins to be hidden, we allow them
to be proper plugins, yet be built-in and not disabled
ever (uness explicitly from command-line by explicitly
removing it and opting out of coreplugins, a very
advanced scenario).

--- a/src/Guit/Guit.targets
+++ b/src/Guit/Guit.targets
@@ -10,6 +10,7 @@
     <ItemGroup>
       <AssemblyAttribute Include="Guit.CorePlugin" Condition="%(ReferencePath.IsCorePlugin)">
         <_Parameter1>%(ReferencePath.Filename)%(ReferencePath.Extension)</_Parameter1>
+        <_Parameter2>%(ReferencePath.IsCorePluginVisible)</_Parameter2>
       </AssemblyAttribute>
     </ItemGroup>
   </Target>
