--- a/src/Plugins/Guit.Open/Guit.Open.csproj
+++ b/src/Plugins/Guit.Open/Guit.Open.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>Guit.Plugin.Changes</RootNamespace>
+    <IsCorePluginVisible>false</IsCorePluginVisible>
   </PropertyGroup>
 
   <ItemGroup>
