Revert "Final rename from dotnet-guit to just guit"
Looks like the `dotnet-*` convention is becoming more prevalent
since .NET Core 3.0 onwards (i.e. https://devblogs.microsoft.com/dotnet/introducing-diagnostics-improvements-in-net-core-3-0/).

So stick to it by keeping our original name.

This reverts commit 3dde5a43ae31b089a2e289ad97e11e6a67a39d25.

--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>guit</AssemblyName>
     <RootNamespace>Guit</RootNamespace>
 
-    <PackageId>guit</PackageId>
+    <PackageId>dotnet-guit</PackageId>
     <ToolCommandName>guit</ToolCommandName>
     <PackAsTool>true</PackAsTool>
 
