Rename the API package to just Guit
Since the tool is `dotnet-guit`, it makes sense for the API to be just `Guit` now.

--- a/src/Guit.Core/Guit.Core.csproj
+++ b/src/Guit.Core/Guit.Core.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>Guit</RootNamespace>
 
     <Description>Library to build plugins for dotnet-guit.</Description>
-    <PackageId>Guit.Core</PackageId>
+    <PackageId>Guit</PackageId>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
