--- a/src/Guit.Core/Guit.Core.csproj
+++ b/src/Guit.Core/Guit.Core.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Merq" Version="1.1.1" />
     <PackageReference Include="MSBuilder.ThisAssembly.Metadata" Version="0.1.4" PrivateAssets="all" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
-    <PackageReference Include="RxFree" Version="1.0.0-beta" PrivateAssets="all" />
+    <PackageReference Include="RxFree" Version="1.0.0-rc.9" PrivateAssets="all" />
     <PackageReference Include="System.Composition" Version="1.3.0" />
     <PackageReference Include="NStack.Core" Version="0.11.0" />
   </ItemGroup>
