--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -95,6 +95,9 @@ AssemblyVersion=$(AssemblyVersion)" />
         <_Parameter1 Condition="'%(InternalsVisibleTo.Key)' == '' and '$(PublicKey)' != ''">%(InternalsVisibleTo.Identity), PublicKey=$(PublicKey)</_Parameter1>
         <_Parameter1 Condition="'%(InternalsVisibleTo.Key)' == '' and '$(PublicKey)' == ''">%(InternalsVisibleTo.Identity)</_Parameter1>
       </AssemblyAttribute>
+      <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+        <_Parameter1>Guit.Tests</_Parameter1>
+      </AssemblyAttribute>
     </ItemGroup>
   </Target>
   
