--- a/src/Guit.Tests/Guit.Tests.csproj
+++ b/src/Guit.Tests/Guit.Tests.csproj
@@ -8,11 +8,18 @@
   <ItemGroup>
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+    <PackageReference Include="moq" Version="4.13.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\gui.cs\Terminal.Gui\Terminal.Gui.csproj" />
     <ProjectReference Include="..\Guit.Core\Guit.Core.csproj" />
     <ProjectReference Include="..\Guit\Guit.csproj" />
+    <ProjectReference Include="..\Plugins\Guit.Changes\Guit.Changes.csproj" />
+    <ProjectReference Include="..\Plugins\Guit.CherryPicker\Guit.CherryPicker.csproj" />
+    <ProjectReference Include="..\Plugins\Guit.Log\Guit.Log.csproj" />
+    <ProjectReference Include="..\Plugins\Guit.Open\Guit.Open.csproj" />
+    <ProjectReference Include="..\Plugins\Guit.Sync\Guit.Sync.csproj" />
   </ItemGroup>
 
 </Project>
