Documentation Added, hasn't been reviewed yet

--- a/src/Guit/Guit.csproj
+++ b/src/Guit/Guit.csproj
@@ -18,6 +18,7 @@
 
     <!-- We inherit this from Guit.Core -->
     <GitThisAssembly>false</GitThisAssembly>
+    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
   <ItemGroup>
